# catkin_ws

./: .gitignore  My_readme.md  README.md  VisionREADME.md  Visionrequirements.txt  setup.bash  test.py
Common commands/: Git.md
hhh/: kkkk.txt  shi.txt
src/Common commands/: Git.md
src/MainNode/: CMakeLists.txt  package.xml
src/MainNode/scripts/: listener.py  talker.py
src/Train_case/FruitsNutsSeg/: example.py  readme.md
src/Train_case/sys_dl_ex/: Readme.md  example.py  labelmetoCOCO.py
src/Train_case/sys_dl_ex/ccjson/: anno.json
src/beginner_tutorials/: CMakeLists.txt  package.xml
src/beginner_tutorials/msg/: Num.msg
src/beginner_tutorials/scripts/: listener.py  talker.py
src/box_node/: CMakeLists.txt  package.xml
src/box_node/script/: grasp_selection.py  pose.py  realsenseClass.py  run_box_node qz.py  run_box_node.py  segment.py  stack_detection.py  visualize.py
src/box_node/sysmodel/: example.py
src/mainnode/: CMakeLists.txt  package.xml
src/mainnode/scripts/: listener.py  move_group_python_interface_tutorial.py  myserver.py  talker.py
src/mainpkg/: CMakeLists.txt  package.xml
src/mainpkg/msg/: MyGoal.msg
src/mainpkg/scripts/: DemoByJoints (copy).py  DemoByJoints.py  DemoByMoveit.py  listener.py  mainnode.py  my_move_group.py  test.py
src/palletizer/: CMakeLists.txt  package.xml
src/palletizer/config/: joint_names_palletizer.yaml
src/palletizer/launch/: display.launch  gazebo.launch
src/palletizer/meshes/: Link1.STL  Link2.STL  Link3.STL  Link4.STL  Link5.STL  Link6.STL  Link7.STL  base_link.STL
src/palletizer/urdf/: palletizer.csv  palletizer.urdf
src/palletizer_config/: .setup_assistant  CMakeLists.txt  package.xml
src/palletizer_config/config/: fake_controllers.yaml  joint_limits.yaml  my_controllers.yaml  ompl_planning.yaml  palletizer.srdf  ros_controllers.yaml  sensors_3d.yaml
src/palletizer_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl_planning_pipeline.launch.xml  palletizer_moveit_controller_manager.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
src/robot_controller/: CMakeLists.txt  package.xml
src/robot_controller/include/robot_controller/: ROBOTHW.hpp  RobotController.hpp  RobotDriver.hpp  RobotFakeDriver.hpp
src/robot_controller/launch/: ArmController.launch  moveit_group_aubo.launch  moveit_group_robot.launch
src/robot_controller/scripts/: cr2_udp_config.json  curi_ros_driver (copy).py  curi_ros_driver.py  local_panel.py  usb_camera_show.py
src/robot_controller/scripts/base/: curi_robot_control.py  curi_robotics.py  interpolation.py  quaternion.py  ui_block.py
src/robot_controller/scripts/communication/: ads_test.py  curi_communication.py  curi_communication_ads.py  curi_communication_sim.py  curi_communication_socket.py  curi_ros_trajectory_action.py  remote_test.py  ros_test_action_client.py  udp_receive_test.py  udp_sent_test.py
src/robot_controller/src/: ROBOTHW.cpp  RobotController.cpp  RobotDriver.cpp  RobotFakeDriver.cpp  RobotNode.cpp
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/launch/: robot.rviz  view_robot.launch
src/robot_description/meshes/collision/: gripper.stl  link0.stl  link1.stl  link2.stl  link3.stl  link4.stl  link5.stl  link6.stl
src/robot_description/meshes/visual/: gripper.dae  link0.dae  (+6 more)
src/robot_description/robots/: robot_arm.urdf
src/robot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/robot_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  robot.srdf  ros_controllers.yaml
src/robot_moveit_config/launch/: chomp_planning_pipeline.launch.xml  demo.launch  demo_gazebo.launch  gazebo.launch  move_group.launch  moveit.rviz  ompl_planning_pipeline.launch.xml  planning_context.launch  robot_moveit_planning_execution.launch  ros_controllers.launch  setup_assistant.launch  trajectory_execution.launch.xml
src/robot_webots/: CMakeLists.txt  package.xml
src/robot_webots/launch/: robot_controller.launch  robot_webots_simulation.launch  webots.launch
src/robot_webots/scripts/: aubo_ros.py  joint_state_publisher.py  robots_ros.py  trajectory_follower.py
src/robot_webots/srv/: FieldSetRotation.srv  FieldSetVec3f.srv  NodeGetOrientation.srv  NodeGetPose.srv  NodeGetPosition.srv  SetSize.srv
src/robot_webots/worlds/: .demo3_world.wbproj
src/robot_webots/worlds/protos/: AuboRobot.wbo  HV-1000.wbo  RangeFinder.wbo  large_box.wbo  small_box.wbo
src/roport/: CMakeLists.txt  package.xml
src/roport/config/: sim_helper_aubo.yaml
src/roport/include/roport/: bt_generic_types.h
src/roport/launch/: hkcenter_depalletizing_real.launch  hkcenter_depalletizing_real_parallel.launch  hkcenter_depalletizing_simulation.launch  hkcenter_depalletizing_simulation_aubo.launch  robot_minimal_demo.launch  test.launch
src/roport/scripts/: depalletizing_helper.py  depalletizing_helper_for_real.py  depalletizing_helper_for_real_parallel.py  quatranion_from_tf.py  roport_moveit_server.py
src/roport/src/: roport_task_scheduler.cpp
src/roport/srv/: ConnectWaypoints.srv  ExecuteAddBox.srv  ExecuteAddPlane.srv  ExecuteGroupJointStates.srv  ExecuteGroupManyPoses.srv  ExecuteGroupPose.srv  ExecuteGroupSpeed.srv  ExecutePlanning.srv  ExecuteSuction.srv  FetchDetectedInfo.srv  GetGroupJointStates.srv  GetGroupPose.srv  GetObjectPose.srv  SenseObjectPose.srv  SetInitFlag.srv  StoreDetectedInfo.srv  TypeInPose.srv
src/roport/tree/: hkcenter_depalletizing.xml  hkcenter_depalletizing_aubo.xml  hkcenter_depalletizing_real.xml  hkcenter_depalletizing_real_robot.xml  hkcenter_depalletizing_real_sensing.xml  robot_minimal_demo.xml  test.xml
src/rotools/utility/: common.py  transform.py
src/testpkg/: CMakeLists.txt  package.xml
src/testpkg/scripts/: test.py
(+2 files in other folders)
